Adicionada rotação na tela de login

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,115 +25,96 @@
             android:orientation="vertical"
             app:layout_constraintGuide_end="30dp" />
 
-        <TextView
-            android:id="@+id/textoEmailCadastro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="@string/textoEmail"
-            android:textColor="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/boxEmailLogin"
-            app:layout_constraintStart_toStartOf="@+id/boxEmailLogin"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <EditText
-            android:id="@+id/boxEmailLogin"
+        <ScrollView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/boxEmail"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/textos"
-            android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/textoSenhaLogin"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textoEmailCadastro" />
-
-        <TextView
-            android:id="@+id/textoSenhaLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="40dp"
-            android:text="@string/textoSenha"
-            android:textColor="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/boxSenhaLogin"
-            app:layout_constraintStart_toStartOf="@+id/boxSenhaLogin"
-            app:layout_constraintTop_toBottomOf="@+id/boxEmailLogin" />
-
-        <EditText
-            android:id="@+id/boxSenhaLogin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/boxSenha"
-            android:inputType="textPassword"
-            android:textColor="@color/boxTextLogin"
-            android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textoSenhaLogin" />
-
-        <TextView
-            android:id="@+id/textoCadastroLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:autoLink="all|web|phone|none|map|email"
-            android:clickable="true"
-            android:text="@string/textoCadastrar"
-            android:textColor="@color/boxTextLogin"
-            android:visibility="visible"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/boxSenhaLogin"
-            app:layout_constraintVertical_bias="0.16000003" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textoEsqueciSenhaLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoLink="all|web|phone|none|map|email"
-            android:clickable="true"
-            android:text="@string/textoEsqueciSenha"
-            android:textColor="@color/boxTextLogin"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.952"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/boxSenhaLogin"
-            app:layout_constraintVertical_bias="0.03" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/lodotipoLogin"
-            android:layout_width="108dp"
-            android:layout_height="238dp"
-            android:contentDescription="@string/descricaoImagem"
-            app:layout_constraintBottom_toTopOf="@+id/textoEmailCadastro"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icon" />
+                <ImageView
+                    android:id="@+id/lodotipoLogin"
+                    android:layout_width="108dp"
+                    android:layout_height="238dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/descricaoImagem"
+                    app:srcCompat="@drawable/icon" />
 
-        <Button
-            android:id="@+id/btnLogarLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#FF5F17D3"
-            android:text="@string/btnLogin"
-            android:textColor="@color/boxTextLogin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.9" />
+                <TextView
+                    android:id="@+id/textoEmailCadastro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/textoEmail"
+                    android:textColor="@color/boxTextLogin" />
+
+                <EditText
+                    android:id="@+id/boxEmailLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/boxEmail"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/textos"
+                    android:textColorLink="@color/boxTextLogin" />
+
+                <TextView
+                    android:id="@+id/textoSenhaLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/textoSenha"
+                    android:textColor="@color/boxTextLogin" />
+
+                <EditText
+                    android:id="@+id/boxSenhaLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/boxSenha"
+                    android:inputType="textPassword"
+                    android:textColor="@color/boxTextLogin"
+                    android:textColorLink="@color/boxTextLogin" />
+
+                <TextView
+                    android:id="@+id/textoEsqueciSenhaLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:autoLink="all|web|phone|none|map|email"
+                    android:clickable="true"
+                    android:text="@string/textoEsqueciSenha"
+                    android:textColor="@color/boxTextLogin"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/textoCadastroLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:autoLink="all|web|phone|none|map|email"
+                    android:clickable="true"
+                    android:text="@string/textoCadastrar"
+                    android:textColor="@color/boxTextLogin"
+                    android:visibility="visible" />
+
+                <Button
+                    android:id="@+id/btnLogarLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:background="#FF5F17D3"
+                    android:text="@string/btnLogin"
+                    android:textColor="@color/boxTextLogin" />
+            </LinearLayout>
+        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
