--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,8 +41,8 @@
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
     <fragment
-        android:id="@+id/perfilFragment"
+        android:id="@+id/nav_perfil"
         android:name="com.example.pb_android_radion.Fragment.PerfilFragment"
-        android:label="fragment_perfil"
+        android:label="@string/menu_settings"
         tools:layout="@layout/fragment_perfil" />
 </navigation>
