--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/degrade_login">
+        android:background="@color/fundoLogin">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -53,7 +53,8 @@
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/textoEmail"
-                    android:textColor="@color/boxTextLogin" />
+                    android:fontFamily="@font/bold"
+                    android:textColor="@color/boxText"/>
 
                 <EditText
                     android:id="@+id/boxEmailLogin"
@@ -61,9 +62,12 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/boxEmail"
+                    android:fontFamily="@font/bold"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/textos"
-                    android:textColorLink="@color/boxTextLogin" />
+                    android:textColor="@color/branco"
+                    android:textColorHighlight="#FFFFFF"
+                    android:textColorHint="#FFFFFF"
+                    android:textColorLink="@color/branco" />
 
                 <TextView
                     android:id="@+id/textoSenhaLogin"
@@ -71,8 +75,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
                     android:layout_marginTop="15dp"
-                    android:text="@string/textoSenha"
-                    android:textColor="@color/boxTextLogin" />
+                    android:text="@string/boxSenha"
+                    android:fontFamily="@font/bold"
+                    android:textColor="@color/boxText" />
 
                 <EditText
                     android:id="@+id/boxSenhaLogin"
@@ -81,8 +86,11 @@
                     android:ems="10"
                     android:hint="@string/boxSenha"
                     android:inputType="textPassword"
-                    android:textColor="@color/boxTextLogin"
-                    android:textColorLink="@color/boxTextLogin" />
+                    android:fontFamily="@font/bold"
+                    android:textColor="@color/branco"
+                    android:textColorHighlight="#FFFFFF"
+                    android:textColorHint="#FFFFFF"
+                    android:textColorLink="@color/branco"/> />
 
                 <TextView
                     android:id="@+id/textoEsqueciSenhaLogin"
@@ -91,8 +99,9 @@
                     android:layout_gravity="right"
                     android:autoLink="all|web|phone|none|map|email"
                     android:clickable="true"
+                    android:fontFamily="@font/bold"
                     android:text="@string/textoEsqueciSenha"
-                    android:textColor="@color/boxTextLogin"
+                    android:textColor="@color/boxText"
                     android:visibility="visible" />
 
                 <TextView
@@ -103,8 +112,9 @@
                     android:layout_marginTop="25dp"
                     android:autoLink="all|web|phone|none|map|email"
                     android:clickable="true"
+                    android:fontFamily="@font/bold"
                     android:text="@string/textoCadastrar"
-                    android:textColor="@color/boxTextLogin"
+                    android:textColor="@color/rosaClaro"
                     android:visibility="visible" />
 
                 <Button
@@ -112,9 +122,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:background="#FF5F17D3"
+                    android:background="@drawable/button"
                     android:text="@string/btnLogin"
-                    android:textColor="@color/boxTextLogin" />
+                    android:textColor="@color/boxText" />
+
             </LinearLayout>
         </ScrollView>
 
